--- a/Class Management/Views/WeeklyTimetable.xaml
+++ b/Class Management/Views/WeeklyTimetable.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Class_Management.Views"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              Loaded="UserControl_Loaded"
              Unloaded="UserControl_Unloaded"
@@ -113,14 +114,14 @@
                         Click="Eraser_Click">
                     <Grid>
                         <TextBlock Margin="0,3,25,0" HorizontalAlignment="Center">Eraser</TextBlock>
-                        <Controls:PackIconMaterial HorizontalAlignment="Center" Margin="40,3,0,0" Kind="Eraser" Height="20" Width="20"></Controls:PackIconMaterial>
+                        <IconPacks:PackIconMaterial HorizontalAlignment="Center" Margin="40,3,0,0" Kind="Eraser" Height="20" Width="20"></IconPacks:PackIconMaterial>
                     </Grid>
                 </Button>
 
                 <Button x:Name="closeUC" Grid.Row="0" Grid.Column="1" Width="30" Height="30" Click="closeUC_Click"
                         Background="#3F51B5" Foreground="White" VerticalAlignment="Top"
                         HorizontalAlignment="Right" Style="{StaticResource btn}">
-                    <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <IconPacks:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
             </Grid>
             <Grid x:Name="DialogSpace" Height="800" Width="1500"></Grid>
