--- a/Class Management/Views/Attendance.xaml
+++ b/Class Management/Views/Attendance.xaml
@@ -8,6 +8,7 @@
              Loaded="UserControl_Loaded"
              Unloaded="UserControl_Unloaded"
              xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              d:DesignHeight="800" d:DesignWidth="1500">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -124,7 +125,7 @@
                         Background="#3F51B5" Foreground="White"
                         HorizontalAlignment="Right" VerticalAlignment="Top"
                         Style="{StaticResource MetroFlatButton}">
-                    <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <IconPacks:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
             </Grid>
             <Grid Height="800" Width="1500" x:Name="DialogSpace" />
