--- a/Class Management/Views/Budget.xaml
+++ b/Class Management/Views/Budget.xaml
@@ -8,6 +8,7 @@
              Loaded="UserControl_Loaded"
              Unloaded="UserControl_Unloaded"
              xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              d:DesignHeight="800" d:DesignWidth="1500">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -74,7 +75,7 @@
                         VerticalAlignment="Top"
                         Grid.Row="0"
                         Style="{StaticResource MetroFlatButton}">
-                    <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <IconPacks:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
 
                 <Grid Grid.Row="1" Margin="50 0">
