--- a/Class Management/Views/DailyTimetable.xaml
+++ b/Class Management/Views/DailyTimetable.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Class_Management.Views"
              mc:Ignorable="d" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              Loaded="UserControl_Loaded"
              Unloaded="UserControl_Unloaded"
              d:DesignHeight="800" d:DesignWidth="1500">
@@ -138,7 +139,7 @@
                         Click="Eraser_Click">
                     <Grid>
                         <TextBlock Margin="0,3,25,0" HorizontalAlignment="Center">Eraser</TextBlock>
-                        <Controls:PackIconMaterial HorizontalAlignment="Center" Margin="40,3,0,0" Kind="Eraser" Height="20" Width="20"></Controls:PackIconMaterial>
+                        <IconPacks:PackIconMaterial HorizontalAlignment="Center" Margin="40,3,0,0" Kind="Eraser" Height="20" Width="20"></IconPacks:PackIconMaterial>
                     </Grid>
                 </Button>
                 <DataGrid x:Name="dailyTimetable"
@@ -188,7 +189,7 @@
                 <Button x:Name="closeUC" Grid.Row="0" Grid.Column="1" Width="30" Height="30" Click="closeUC_Click"
                         Background="Transparent" Foreground="White"
                         HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MetroFlatButton}" >
-                    <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <IconPacks:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Button>
             </Grid>
             <Grid x:Name="DialogSpace" Height="800" Width="1500"></Grid>
