--- a/Class Management/Views/AddTeacher.xaml
+++ b/Class Management/Views/AddTeacher.xaml
@@ -21,7 +21,8 @@
             </Style>
 
             <Style x:Key="formtextbox"
-                   TargetType="{x:Type TextBox}">
+                   TargetType="{x:Type TextBox}"
+                   BasedOn="{StaticResource MetroTextBox}">
                 <Setter Property="Grid.Column" Value="0"></Setter>
                 <Setter Property="HorizontalAlignment" Value="Left"></Setter>
                 <Setter Property="VerticalAlignment" Value="Top"></Setter>
