--- a/Class Management/Views/CallData.xaml
+++ b/Class Management/Views/CallData.xaml
@@ -59,7 +59,7 @@
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="3*" />
+                        <ColumnDefinition Width="4*" />
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Background="Beige"
@@ -83,20 +83,41 @@
                         <Button x:Name="ImportExcel" Margin="150 10" Height="40" Style="{StaticResource btn}" Click="ImportExcel_Click">Import From Excel</Button>
                     </StackPanel>
 
-                    <Grid Grid.Column="1" Margin="20">
-                        <DataGrid x:Name="CallDataDataGrid" AutoGenerateColumns="True" 
+                    <Grid Grid.Column="1" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <DataGrid x:Name="DatabaseDataGrid" 
+                                  AutoGenerateColumns="False" 
                                   CanUserAddRows="False"
                                   RowHeight="30"
                                   IsReadOnly="True"
                                   CanUserSortColumns="True"
                                   Style="{StaticResource AzureDataGrid}"
                                   BorderBrush="Black" 
-                                  BorderThickness="2">
+                                  BorderThickness="2"
+                                  Grid.Column="0"
+                                  Margin="10">
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Student Name" Width="1*" Binding="{Binding name}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="Contact Number" Width="1*" Binding="{Binding contact_no}"></DataGridTextColumn>
                             </DataGrid.Columns>
                         </DataGrid>
+
+                        <DataGrid x:Name="ExcelDataGrid" 
+                                  AutoGenerateColumns="True" 
+                                  CanUserAddRows="False"
+                                  RowHeight="30"
+                                  IsReadOnly="True"
+                                  CanUserSortColumns="True"
+                                  Style="{StaticResource AzureDataGrid}"
+                                  BorderBrush="Black" 
+                                  BorderThickness="2"
+                                  Margin="10"
+                                  Grid.Column="1"
+                                  Visibility="Collapsed"></DataGrid>
                     </Grid>
                 </Grid>
 
