--- a/Class Management/Views/CallData.xaml
+++ b/Class Management/Views/CallData.xaml
@@ -58,8 +58,8 @@
 
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="4*" />
                     </Grid.ColumnDefinitions>
 
                     <StackPanel Background="Beige"
@@ -88,7 +88,7 @@
                             <ColumnDefinition Width="1*" />
                             <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
-                        
+
                         <DataGrid x:Name="DatabaseDataGrid" 
                                   AutoGenerateColumns="False" 
                                   CanUserAddRows="False"
@@ -99,12 +99,25 @@
                                   BorderBrush="Black" 
                                   BorderThickness="2"
                                   Grid.Column="0"
-                                  Margin="10">
+                                  Margin="10 10 10 70">
                             <DataGrid.Columns>
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox x:Name="chk" Checked="chk_Checked" Unchecked="chk_Checked" />
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
                                 <DataGridTextColumn Header="Student Name" Width="1*" Binding="{Binding name}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="Contact Number" Width="1*" Binding="{Binding contact_no}"></DataGridTextColumn>
                             </DataGrid.Columns>
                         </DataGrid>
+
+                        <Button Margin="10 30" 
+                                HorizontalAlignment="Right" 
+                                VerticalAlignment="Bottom"
+                                Style="{StaticResource btn}"
+                                Click="Delete_rows_Click">Delete</Button>
 
                         <DataGrid x:Name="ExcelDataGrid" 
                                   AutoGenerateColumns="True" 
